[gd_scene load_steps=6 format=2]

[ext_resource path="res://PixeloidSans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 72.9797
margin_top = -256.0
margin_right = 384.0
margin_bottom = -128.0
rect_scale = Vector2( 1.92, 2.16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 311.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 311.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "How To Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 311.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
